// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox components Renders CheckboxContainer properly 1`] = `
<div
  class="sc-gsDKAQ fpwdZo"
>
  Test
</div>
`;

exports[`Checkbox components Renders CheckboxDiv properly 1`] = `
<div
  class="sc-bdvvtL hrMrFo"
>
  Test
</div>
`;

exports[`Checkbox components Renders TextCheckBox properly 1`] = `
<label
  class="sc-hKwDye jWwVvL"
>
  Test
</label>
`;
